--- a/src/lib/index.css
+++ b/src/lib/index.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Droid+Sans+Mono");
-* {
+/* * {
   box-sizing: border-box;
-}
+} */
 .vl {
     border-right: 2px solid red;
     height: 40px;
@@ -17,16 +17,15 @@
 .milestone span {
   font-size: 11px;
   font-family: "Droid Sans Mono", monospace;
-  color: #000;
+  color: #fff;
 }
 
-span {
+.progressText {
   font-size: 12px;
   font-family: "Droid Sans Mono", monospace;
-  color: #000;
+  color: #fff;
   font-weight: bold;
   text-align: right;
-  margin-right: 10px;
 }
 
 .flexLines {
