--- a/src/lib/index.css
+++ b/src/lib/index.css
@@ -3,13 +3,13 @@
   box-sizing: border-box;
 } */
 .vl {
-    border-right: 2px solid red;
-    height: 40px;
-    margin-top:0px;
+  border-right: 2px solid red;
+  height: 40px;
+  margin-top: 0px;
 }
 .empty-div {
   height: 40px;
-  margin-top:0px;
+  margin-top: 0px;
 }
 .milestone {
   text-align: right;
@@ -55,9 +55,9 @@
   width: 80px;
   height: 80px;
   -webkit-perspective-origin: 50% 50%;
-          perspective-origin: 50% 50%;
+  perspective-origin: 50% 50%;
   -webkit-perspective: 300px;
-          perspective: 300px;
+  perspective: 300px;
   background-color: black;
   border-radius: 10px;
   box-shadow: 0px 10px 10px -10px grey;
@@ -66,7 +66,7 @@
   /* margin-top: 5px; */
   display: flex;
   margin: 5px auto;
-  height: 20px;
+  height: 25px;
   width: 80px;
   background-color: black;
   align-items: flex-start;
@@ -75,12 +75,13 @@
   justify-content: center;
 }
 .UnitItemContainer span {
-  padding:0;
+  padding: 0;
   margin: 0 auto;
   color: #fff;
   font-size: 1rem;
 }
-.upperCard, .lowerCard {
+.upperCard,
+.lowerCard {
   display: flex;
   position: relative;
   justify-content: center;
@@ -90,7 +91,8 @@
   text-align: center;
   align-items: center;
 }
-.upperCard span, .lowerCard span {
+.upperCard span,
+.lowerCard span {
   font-size: 3em;
   font-family: "Droid Sans Mono", monospace;
   font-weight: lighter;
@@ -106,7 +108,7 @@
 }
 .upperCard span {
   -webkit-transform: translateY(50%);
-          transform: translateY(50%);
+  transform: translateY(50%);
 }
 
 .lowerCard {
@@ -117,7 +119,7 @@
 }
 .lowerCard span {
   -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 
 .flipCard {
@@ -129,7 +131,7 @@
   height: 40px;
   overflow: hidden;
   -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 .flipCard span {
   font-family: "Droid Sans Mono", monospace;
@@ -141,9 +143,9 @@
   top: 50%;
   align-items: flex-start;
   -webkit-transform-origin: 50% 0%;
-          transform-origin: 50% 0%;
+  transform-origin: 50% 0%;
   -webkit-transform: rotateX(180deg);
-          transform: rotateX(180deg);
+  transform: rotateX(180deg);
   background-color: black;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
@@ -153,15 +155,15 @@
 .flipCard.unfold span {
   /* width:100%; */
   -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 .flipCard.fold {
   top: 0%;
   align-items: flex-end;
   -webkit-transform-origin: 50% 100%;
-          transform-origin: 50% 100%;
+  transform-origin: 50% 100%;
   -webkit-transform: rotateX(0deg);
-          transform: rotateX(0deg);
+  transform: rotateX(0deg);
   background-color: black;
   border-top-right-radius: 10px;
   border-top-left-radius: 10px;
@@ -171,97 +173,99 @@
 .flipCard.fold span {
   /* width:100%; */
   -webkit-transform: translateY(50%);
-          transform: translateY(50%);
+  transform: translateY(50%);
 }
 
 .fold {
-  -webkit-animation: fold 0.6s cubic-bezier(0.955, 0.515, 0.515, 0.955) 0s 1 normal forwards;
-          animation: fold 0.6s cubic-bezier(0.955, 0.515, 0.515, 0.955) 0s 1 normal forwards;
+  -webkit-animation: fold 0.6s cubic-bezier(0.955, 0.515, 0.515, 0.955) 0s 1
+    normal forwards;
+  animation: fold 0.6s cubic-bezier(0.955, 0.515, 0.515, 0.955) 0s 1 normal
+    forwards;
   -webkit-transform-style: preserve-3d;
-          transform-style: preserve-3d;
+  transform-style: preserve-3d;
 }
 
 .unfold {
-  -webkit-animation: unfold 0.6s cubic-bezier(0.955, 0.515, 0.515, 0.955) 0s 1 normal forwards;
-          animation: unfold 0.6s cubic-bezier(0.955, 0.515, 0.515, 0.955) 0s 1 normal forwards;
+  -webkit-animation: unfold 0.6s cubic-bezier(0.955, 0.515, 0.515, 0.955) 0s 1
+    normal forwards;
+  animation: unfold 0.6s cubic-bezier(0.955, 0.515, 0.515, 0.955) 0s 1 normal
+    forwards;
   -webkit-transform-style: preserve-3d;
-          transform-style: preserve-3d;
+  transform-style: preserve-3d;
 }
 
 @-webkit-keyframes fold {
   0% {
     -webkit-transform: rotateX(0deg);
-            transform: rotateX(0deg);
+    transform: rotateX(0deg);
   }
   100% {
     -webkit-transform: rotateX(-180deg);
-            transform: rotateX(-180deg);
+    transform: rotateX(-180deg);
   }
 }
 
 @keyframes fold {
   0% {
     -webkit-transform: rotateX(0deg);
-            transform: rotateX(0deg);
+    transform: rotateX(0deg);
   }
   100% {
     -webkit-transform: rotateX(-180deg);
-            transform: rotateX(-180deg);
+    transform: rotateX(-180deg);
   }
 }
 @-webkit-keyframes unfold {
   0% {
     -webkit-transform: rotateX(180deg);
-            transform: rotateX(180deg);
+    transform: rotateX(180deg);
   }
   100% {
     -webkit-transform: rotateX(0deg);
-            transform: rotateX(0deg);
+    transform: rotateX(0deg);
   }
 }
 @keyframes unfold {
   0% {
     -webkit-transform: rotateX(180deg);
-            transform: rotateX(180deg);
+    transform: rotateX(180deg);
   }
   100% {
     -webkit-transform: rotateX(0deg);
-            transform: rotateX(0deg);
+    transform: rotateX(0deg);
   }
 }
 
 /* Portrait and Landscape */
-@media only screen
-  and (min-device-width: 320px)
-  and (max-device-width: 667px)
-  and (-webkit-min-device-pixel-ratio: 2) {
-    .flipClock {
-      width: 200px;
-    }
-    .flipUnitContainer {
-      width: 45.7px;
-      height: 45.7px;
-      border-radius: 10px;
-    }
-    .UnitItemContainer {
-      /* margin-top: 5px; */
-      height: 15px;
-      width: 45.7px;
-      border-radius: 3px;
-    }
-    .UnitItemContainer span {
-      font-size: 0.7rem;
-    }
-    .flipCard {
-      width: 45.7px;
-      height: 22.82px;
-    }
-    .flipCard span {
-      font-size: 1.5em;
-    }
-    .upperCard span, .lowerCard span {
-      font-size: 1.5em;
-    }
+@media only screen and (min-device-width: 320px) and (max-device-width: 667px) {
+  .flipClock {
+    width: 200px;
+  }
+  .flipUnitContainer {
+    width: 45.7px;
+    height: 45.7px;
+    border-radius: 10px;
+  }
+  .UnitItemContainer {
+    /* margin-top: 5px; */
+    height: 15px;
+    width: 45.7px;
+    border-radius: 3px;
+  }
+  .UnitItemContainer span {
+    font-size: 0.7rem;
+  }
+  .flipCard {
+    width: 45.7px;
+    height: 22.82px;
+  }
+  .flipCard span {
+    font-size: 1.5em;
+  }
+  .upperCard span,
+  .lowerCard span {
+    font-size: 1.5em;
+  }
 }
 
 /* ----------- iPhone 6+, 7+ and 8+ ----------- */
@@ -277,35 +281,33 @@
 /* ----------- iPhone X ----------- */
 
 /* Portrait and Landscape */
-@media only screen
-  and (min-device-width: 375px)
-  and (max-device-width: 812px)
-  and (-webkit-min-device-pixel-ratio: 3) {
-    .flipClock {
-      width: 230px;
-    }
-    .flipUnitContainer {
-      width: 52.57px;
-      height: 52.57px;
-      border-radius: 10px;
-    }
-    .UnitItemContainer {
-      /* margin-top: 5px; */
-      height: 15px;
-      width: 52.57px;
-      border-radius: 3px;
-    }
-    .UnitItemContainer span {
-      font-size: 0.7rem;
-    }
-    .flipCard {
-      width: 52.57px;
-      height: 26.2857px;
-    }
-    .flipCard span {
-      font-size: 1.5em;
-    }
-    .upperCard span, .lowerCard span {
-      font-size: 1.5em;
-    }
+@media only screen and (min-device-width: 375px) and (max-device-width: 812px) {
+  .flipClock {
+    width: 230px;
+  }
+  .flipUnitContainer {
+    width: 52.57px;
+    height: 52.57px;
+    border-radius: 10px;
+  }
+  .UnitItemContainer {
+    /* margin-top: 5px; */
+    height: 15px;
+    width: 52.57px;
+    border-radius: 3px;
+  }
+  .UnitItemContainer span {
+    font-size: 0.7rem;
+  }
+  .flipCard {
+    width: 52.57px;
+    height: 26.2857px;
+  }
+  .flipCard span {
+    font-size: 1.5em;
+  }
+  .upperCard span,
+  .lowerCard span {
+    font-size: 1.5em;
+  }
 }
